# Logger

./: .gitignore  CMakeLists.txt  README.md
inc/: Logger.h
src/: Logger.cpp  main.cpp
tests/: test_Logger.cpp
